--- a/app/src/main/res/layout/fragement_sdcard_detail_info.xml
+++ b/app/src/main/res/layout/fragement_sdcard_detail_info.xml
@@ -9,11 +9,12 @@
 
     <!-- 顶部栏 -->
     <com.cylan.jiafeigou.widget.CustomToolbar
-        layout="@layout/layout_default_custom_tool_bar"
         android:id="@+id/custom_toolbar"
+        layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_theme="true"
         hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_tab_back_selector"
         hunt:ct_left_title="@string/SETTING_SD"
