--- a/app/src/main/res/layout/fragment_mine_info_set_password.xml
+++ b/app/src/main/res/layout/fragment_mine_info_set_password.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <com.cylan.jiafeigou.widget.CustomToolbar
+        hunt:ct_enable_theme="true"
         android:id="@+id/custom_toolbar"
         layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="match_parent"
