--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -111,4 +111,5 @@
     <color name="color_767676">#767676</color>
     <color name="color_F2333333">#F2333333</color>
     <color name="color_FFFCE1">#FFFCE1</color>
+    <color name="color_23344e">#23344e</color>
 </resources>
