--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -3,18 +3,20 @@
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_white"
     android:clickable="true"
     android:orientation="vertical">
 
     <!-- 顶部栏 -->
 
     <com.cylan.jiafeigou.widget.CustomToolbar
-        layout="@layout/layout_default_custom_tool_bar"
         android:id="@+id/custom_toolbar"
+        layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         hunt:ct_background_color="@color/color_0ba8cf"
         hunt:ct_enable_shadow="true"
+        hunt:ct_enable_theme="true"
         hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
         hunt:ct_left_title="@string/EQUIPMENT_INFO"
