--- a/app/src/main/res/layout/fragment_mine_add_from_contact.xml
+++ b/app/src/main/res/layout/fragment_mine_add_from_contact.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
-    android:clickable="true"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_white">
+    android:background="@color/color_white"
+    android:clickable="true"
+    android:orientation="vertical">
 
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/custom_toolbar"
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         hunt:ct_background_color="@color/color_0ba8cf"
         hunt:ct_enable_shadow="false"
+        hunt:ct_enable_theme="true"
         hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
         hunt:ct_icon_right="@drawable/me_icon_finish_normal"
@@ -25,42 +26,42 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
-            android:layout_marginTop="@dimen/y8"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/y54">
+            android:layout_height="@dimen/y54"
+            android:layout_marginTop="@dimen/y8">
 
             <EditText
                 android:id="@+id/et_mine_add_contact_mesg"
-                android:textColor="@color/color_333333"
-                android:textSize="@dimen/sp16"
-                android:layout_centerVertical="true"
-                android:hint="验证消息"
-                android:background="@null"
-                android:maxLength="20"
-                android:layout_marginRight="@dimen/x20"
-                android:layout_marginLeft="@dimen/x20"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/x20"
+                android:layout_marginRight="@dimen/x20"
+                android:background="@null"
+                android:hint="验证消息"
+                android:maxLength="20"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp16" />
 
             <View
                 android:id="@+id/view_mine_add_from_contact_line"
-                android:layout_marginBottom="@dimen/y8"
-                android:layout_alignParentBottom="true"
-                android:layout_marginRight="@dimen/x20"
-                android:layout_marginLeft="@dimen/x20"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y1"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="@dimen/y8"
+                android:layout_marginLeft="@dimen/x20"
+                android:layout_marginRight="@dimen/x20"
                 android:background="@color/color_f2f2f2" />
 
             <ImageView
                 android:id="@+id/iv_mine_add_contact_clear_text"
-                android:visibility="gone"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="@dimen/x20"
-                android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_clear_text" />
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/x20"
+                android:src="@drawable/icon_clear_text"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
