--- a/app/src/main/res/layout/fragment_mine_share_device.xml
+++ b/app/src/main/res/layout/fragment_mine_share_device.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/sp18"
         hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_theme="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
         hunt:ct_left_title="@string/Tap3_ShareDevice"
         hunt:ct_left_title_color="@color/color_white" />
