--- a/app/src/main/res/layout/fragment_pan720_full.xml
+++ b/app/src/main/res/layout/fragment_pan720_full.xml
@@ -6,12 +6,13 @@
     tools:context="com.cylan.jiafeigou.n.view.panorama.Pan720FullFragment">
 
     <com.cylan.jiafeigou.widget.CustomToolbar
-        layout="@layout/layout_default_custom_tool_bar"
         android:id="@+id/custom_toolbar"
+        layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         hunt:ct_background_color="@color/color_0ba8cf"
         hunt:ct_enable_shadow="false"
+        hunt:ct_enable_theme="true"
         hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
         hunt:ct_left_title_color="@color/color_white"
