--- a/app/src/main/res/layout/fragment_alarm_sound_effect.xml
+++ b/app/src/main/res/layout/fragment_alarm_sound_effect.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         hunt:ct_background_color="@color/color_0ba8cf"
         hunt:ct_fit_system_window="true"
+        hunt:ct_enable_theme="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
         hunt:ct_left_title="@string/SOUNDS"
         hunt:ct_left_title_color="@color/color_white"
