--- a/app/src/main/res/layout/fragment_mine_friend_add_from_contact.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_add_from_contact.xml
@@ -1,37 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:clickable="true"
     android:background="@color/color_white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/rl_home_mine_relativesandfriends_scan_add"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        layout="@layout/friend_add_by_contract_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:background="#0BA8CF">
-
-        <ImageView
-            android:id="@+id/iv_home_mine_relativesandfriends_add_from_contact_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/x15"
-            android:clickable="true"
-            android:src="@drawable/nav_tab_back_selector" />
-
-        <EditText
-            android:id="@+id/et_add_phone_number"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y48"
-            android:layout_marginLeft="@dimen/x48"
-            android:textCursorDrawable="@drawable/search_friend_cursor_color"
-            android:hint="@string/Search"
-            android:textColorHint="#60ffffff"
-            android:background="@null"
-            android:textSize="@dimen/sp18" />
-    </RelativeLayout>
+        app:ct_background_color="@color/color_0ba8cf"
+        app:ct_enable_theme="true"
+        app:ct_fit_system_window="true" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -41,7 +24,7 @@
             android:id="@+id/rcy_contact_list"
             android:overScrollMode="never"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+            android:layout_height="wrap_content"/>
 
         <LinearLayout
             android:id="@+id/ll_no_contact"
