--- a/app/src/main/res/layout/fragment_mine_friend_scan_add.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_scan_add.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/sp18"
+        hunt:ct_enable_theme="true"
         hunt:ct_background_color="@color/color_0ba8cf"
         hunt:ct_icon="@drawable/nav_icon_back_white"
         hunt:ct_left_title="@string/Tap3_FriendsAdd_QR"
