--- a/app/src/main/res/layout/fragment_mine_info_mailbox.xml
+++ b/app/src/main/res/layout/fragment_mine_info_mailbox.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_theme="true"
         hunt:ct_enable_shadow="false"
         hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
