--- a/app/src/main/res/layout/frgment_mine_share_to_contact.xml
+++ b/app/src/main/res/layout/frgment_mine_share_to_contact.xml
@@ -1,70 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/color_white"
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:background="#0BA8CF"
-        android:id="@+id/rl_mine_share_to_contact"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        layout="@layout/mine_share_to_contract_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/iv_mine_share_to_contact_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/x15"
-                android:src="@drawable/nav_tab_back_selector" />
-
-            <FrameLayout
-                android:layout_toRightOf="@id/iv_mine_share_to_contact_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:gravity="center_vertical"
-                    android:id="@+id/tv_top_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/y48"
-                    android:text="@string/Tap3_ShareDevice_ToContacts"
-                    android:textColor="@color/color_white"
-                    android:textSize="@dimen/sp18" />
-
-                <EditText
-                    android:gravity="center_vertical"
-                    android:singleLine="true"
-                    android:id="@+id/et_search_contact"
-                    android:visibility="gone"
-                    android:textColor="@color/color_white"
-                    android:textColorHint="#60ffffff"
-                    android:background="@null"
-                    android:hint="@string/Search"
-                    android:textCursorDrawable="@drawable/search_friend_cursor_color"
-                    android:textSize="@dimen/sp18"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/y48" />
-
-            </FrameLayout>
-
-            <ImageView
-                android:src="@drawable/icon_search"
-                android:id="@+id/iv_mine_share_to_contact_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:clickable="true"
-                android:padding="@dimen/x15" />
-        </RelativeLayout>
-    </FrameLayout>
+        android:layout_height="wrap_content"
+        app:ct_background_color="@color/color_0ba8cf"
+        app:ct_enable_theme="true"
+        app:ct_fit_system_window="true" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -74,7 +24,7 @@
             android:id="@+id/rcy_mine_share_to_contact_list"
             android:overScrollMode="never"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+            android:layout_height="wrap_content"/>
 
         <LinearLayout
             android:id="@+id/ll_no_contact"
