--- a/app/src/main/res/layout/layout_fragment_bell_setting.xml
+++ b/app/src/main/res/layout/layout_fragment_bell_setting.xml
@@ -7,30 +7,18 @@
     android:clickable="true"
     android:orientation="vertical">
 
-    <LinearLayout
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        layout="@layout/layout_default_custom_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:id="@+id/fLayout_top_bar_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/color_0ba8cf">
-
-            <TextView
-                android:id="@+id/imgV_top_bar_center"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y48"
-                android:drawablePadding="@dimen/y15"
-                android:drawableStart="@drawable/nav_tab_back_selector"
-                android:gravity="center_vertical"
-                android:paddingStart="@dimen/y15"
-                android:text="@string/SETTINGS_1"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/sp18" />
-        </FrameLayout>
-    </LinearLayout>
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_enable_theme="true"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_left_title="@string/SETTINGS_1"
+        hunt:ct_left_title_color="@color/color_white" />
 
     <LinearLayout
         android:id="@+id/lLayout_setting_container"
@@ -86,7 +74,7 @@
                 android:layout_height="@dimen/y72"
                 android:layout_marginEnd="@dimen/y20"
                 android:layout_marginStart="@dimen/y20"
-                hunt:sv_image_src="@drawable/setting_icon_information"
+                hunt:sv_image_src="@drawable/setting_icon_wifi"
                 hunt:sv_title="@string/WIFI"
                 hunt:sv_v_divider="true" />
         </LinearLayout>
