--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -457,12 +457,17 @@
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">false</item>
-        <item name="android:windowAnimationStyle">@style/warn_anim</item>
+        <item name="android:windowAnimationStyle">@style/share_dialog_anim</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
     <style name="warn_anim" parent="android:Animation">
         <item name="android:windowEnterAnimation">@anim/slide_down_in</item>
+        <item name="android:windowExitAnimation">@anim/slide_down_out</item>
+    </style>
+
+    <style name="share_dialog_anim" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/share_dialog_in</item>
         <item name="android:windowExitAnimation">@anim/slide_down_out</item>
     </style>
 </resources>
