--- a/app/src/main/res/layout/fragment_mine_userinfo_lookbigimagehead.xml
+++ b/app/src/main/res/layout/fragment_mine_userinfo_lookbigimagehead.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/color_black"
     android:clickable="true"
+    android:id="@+id/rl_root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
